[gd_scene load_steps=11 format=2]

[ext_resource path="res://Picture_Imports/Items/restart.png" type="Texture" id=1]
[ext_resource path="res://Picture_Imports/Materials/UI/StarGolden.png" type="Texture" id=2]
[ext_resource path="res://Scripts/LevelComplete.gd" type="Script" id=3]
[ext_resource path="res://Picture_Imports/Items/home.png" type="Texture" id=4]
[ext_resource path="res://Themes/Meridina_dynamicfont_levelcomplete.tres" type="DynamicFont" id=5]
[ext_resource path="res://Picture_Imports/Materials/UI/BoardBackgroundGolden.png" type="Texture" id=6]
[ext_resource path="res://Picture_Imports/Items/Key.png" type="Texture" id=7]
[ext_resource path="res://Picture_Imports/Items/CartoonGoldCoins1_11.png" type="Texture" id=8]
[ext_resource path="res://Picture_Imports/Items/Chest_01.png" type="Texture" id=9]
[ext_resource path="res://Picture_Imports/Items/resume.png" type="Texture" id=10]

[node name="LevelComplete" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelComplete" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="LevelComplete"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -250.0
margin_right = 400.0
margin_bottom = 250.0
rect_min_size = Vector2( 800, 500 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="LevelComplete/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelComplete/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelComplete/Control/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -153.5
margin_right = 158.0
margin_bottom = 153.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LevelComplete/Control/TextureRect/VBoxContainer"]
margin_left = 31.0
margin_right = 284.0
margin_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.482353, 0.235294, 0.235294, 1 )
text = "LEVEL COMPLETE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarsHbox" type="HBoxContainer" parent="LevelComplete/Control/TextureRect/VBoxContainer"]
margin_left = 75.0
margin_top = 50.0
margin_right = 241.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 4
alignment = 1

[node name="Star1" type="TextureRect" parent="LevelComplete/Control/TextureRect/VBoxContainer/StarsHbox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true

[node name="Star2" type="TextureRect" parent="LevelComplete/Control/TextureRect/VBoxContainer/StarsHbox"]
margin_left = 58.0
margin_right = 108.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true

[node name="Star3" type="TextureRect" parent="LevelComplete/Control/TextureRect/VBoxContainer/StarsHbox"]
margin_left = 116.0
margin_right = 166.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="LevelComplete/Control/TextureRect/VBoxContainer"]
margin_top = 108.0
margin_right = 316.0
margin_bottom = 199.0

[node name="HBoxContainer" type="HBoxContainer" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer"]
margin_right = 316.0
margin_bottom = 25.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 159.0
margin_bottom = 25.0
rect_min_size = Vector2( 30, 20 )
texture = ExtResource( 7 )
expand = true

[node name="Keys" type="Label" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 0.662745, 0.227451, 0.164706, 1 )
margin_left = 167.0
margin_right = 186.0
margin_bottom = 25.0
text = ":0"

[node name="HBoxContainer2" type="HBoxContainer" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 316.0
margin_bottom = 58.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 129.0
margin_right = 159.0
margin_bottom = 25.0
rect_min_size = Vector2( 30, 20 )
texture = ExtResource( 8 )
expand = true

[node name="Coins" type="Label" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color( 0.662745, 0.227451, 0.164706, 1 )
margin_left = 167.0
margin_right = 186.0
margin_bottom = 25.0
text = ":0"

[node name="HBoxContainer3" type="HBoxContainer" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 316.0
margin_bottom = 91.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 129.0
margin_right = 159.0
margin_bottom = 25.0
rect_min_size = Vector2( 30, 20 )
texture = ExtResource( 9 )
expand = true

[node name="Treasure" type="Label" parent="LevelComplete/Control/TextureRect/VBoxContainer/VBoxContainer/HBoxContainer3"]
self_modulate = Color( 0.662745, 0.227451, 0.164706, 1 )
margin_left = 167.0
margin_right = 186.0
margin_bottom = 25.0
text = ":0"

[node name="HBoxContainer2" type="HBoxContainer" parent="LevelComplete/Control/TextureRect/VBoxContainer"]
margin_top = 207.0
margin_right = 316.0
margin_bottom = 307.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="LevelComplete/Control/TextureRect/VBoxContainer/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Restart" type="TextureButton" parent="LevelComplete/Control/TextureRect/VBoxContainer/HBoxContainer2"]
margin_left = 108.0
margin_right = 208.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 1 )
expand = true

[node name="Next" type="TextureButton" parent="LevelComplete/Control/TextureRect/VBoxContainer/HBoxContainer2"]
margin_left = 216.0
margin_right = 316.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 10 )
expand = true
[connection signal="button_down" from="LevelComplete/Control/TextureRect/VBoxContainer/HBoxContainer2/Home" to="." method="_on_Home_button_down"]
[connection signal="button_down" from="LevelComplete/Control/TextureRect/VBoxContainer/HBoxContainer2/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="LevelComplete/Control/TextureRect/VBoxContainer/HBoxContainer2/Next" to="." method="_on_Next_button_down"]
